Fix NPE in RuntimeUpdatesProcessor
    Fixes: #19090